<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:fillViewport="true"
    tools:context="com.example.android.hoopsmusic.NowPlayingActivity">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/nowplaying_image"
            style="@style/songImage"
            android:alpha=".68"
            android:contentDescription="@string/contentDescription_albums"
            android:src="@drawable/song_image" />

        <TextView
            android:id="@+id/song_name"
            style="@style/songTextView"
            android:layout_gravity="center"
            android:text="@string/song_shortcut" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/songTimeStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar"
                style="@style/seekBar"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/songTimeEnd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescriptionPreviousButton"
                android:padding="@dimen/padding_6dp"

                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescriptionPlayButton"
                android:padding="@dimen/padding_6dp"
                android:src="@drawable/playbutton_64" />

            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/contentDescriptionNextButton"
                android:padding="@dimen/padding_6dp"
                android:src="@drawable/next" />


        </LinearLayout>

        <TextView
            android:id="@+id/home_button"
            style="@style/playlistTextView"
            android:background="@drawable/backtextview"
            android:text="@string/homeButton"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/now_playing_app_structure"
            style="@style/descriptions"
            android:background="@drawable/backtextview"
            android:text="@string/description_now_playing_structure"
            android:textAllCaps="false" />

    </LinearLayout>


</ScrollView>
