<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_discover"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="com.example.android.hoopsmusic.DiscoverActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/radio_description"
            style="@style/descriptions"
            android:background="@drawable/backtextview"
            android:text="@string/description_radio"
            android:textAllCaps="false" />

        <TextView
            style="@style/teamsTextView"
            android:text="@string/recommended_radio" />

        <View style="@style/divider" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollViewTeams"
            style="@style/horizontalScroll">

            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/radio_1"
                    style="@style/teams_logo_image"
                    android:contentDescription="@string/contentDescription_radio"
                    android:src="@drawable/radio_station"
                    android:alpha=".68"/>

                <ImageView
                    android:id="@+id/radio_2"
                    style="@style/teams_logo_image"
                    android:contentDescription="@string/contentDescription_radio"
                    android:src="@drawable/radio_station"
                    android:alpha=".68"/>

                <ImageView
                    android:id="@+id/radio_3"
                    style="@style/teams_logo_image"
                    android:contentDescription="@string/contentDescription_radio"
                    android:src="@drawable/radio_station"
                    android:alpha=".68"/>

                <ImageView
                    android:id="@+id/radio_4"
                    style="@style/teams_logo_image"
                    android:contentDescription="@string/contentDescription_radio"
                    android:src="@drawable/radio_station"
                    android:alpha=".68"/>

                <ImageView
                    android:id="@+id/radio_5"
                    style="@style/teams_logo_image"
                    android:contentDescription="@string/contentDescription_radio"
                    android:src="@drawable/radio_station"
                    android:alpha=".68"/>

            </LinearLayout>

        </HorizontalScrollView>

        <View style="@style/divider" />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/startTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/radioTimeStart"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBarRadio"
                style="@style/seekBar"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:id="@+id/endTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding"
                android:text="@string/radioTimeEnd"
                android:textColor="@color/colorWhite"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:padding="12dp">

            <ImageView
                android:id="@+id/previous_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:padding="@dimen/padding_6dp"

                android:src="@drawable/back" />

            <ImageView
                android:id="@+id/play_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_6dp"
                android:src="@drawable/playbutton_64" />


            <ImageView
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/padding_6dp"
                android:src="@drawable/next" />


        </LinearLayout>

        <View style="@style/divider" />

        <TextView
            android:id="@+id/home_button"
            style="@style/playlistTextView"
            android:background="@drawable/backtextview"
            android:text="@string/homeButton"
            android:textAlignment="center"
            android:textAllCaps="true" />

        <TextView
            android:id="@+id/radio_app_structure"
            style="@style/descriptions"
            android:background="@drawable/backtextview"
            android:text="@string/description_radio_structure"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>